@@ -1,6 +1,6 @@
-93d796fc19075daf32c17d65e9a6c79d *DESCRIPTION
+2c97bcafce4fa85a0b502b591f4adc28 *DESCRIPTION
 bdc0b5dcfe4551299af1b457c51ac1cf *NAMESPACE
-3f4d0b9032531c2e50664625ecfbf961 *NEWS
+67fdb31844b1470812092e0e6f787351 *NEWS
 d4e04ada91a2e5da44d0401eedc3d202 *R/Direction.r
 1ee92e18a32f119db175bfccf30b5545 *R/GradientL.r
 df39785a3164181a9ae72b332745fffd *R/HesseL.r
@@ -18,12 +18,12 @@ f51bed9d970a2133227300295a5ac833 *R/StepSize.r
 a3aea7f3edcfccf47cea0f8d0fca0c79 *R/dMLE.r
 9467b50fb593347f59549493036881ba *R/dTriangular.r
 aca24ac106333f7c52f88dfecc1e7171 *R/kInflatedLogConDiscr.r
-78eca28649d89ed6f8a85019485f64d2 *R/logConDiscrCI.r
+f892a0ffe1a3de9ded4c87ffc6933247 *R/logConDiscrCI.r
 4cba7b0e6f25aef52e9297964a6b0c2c *R/logConDiscrMLE.r
 187b38b93871edd3647dd2df4ab7e5d6 *R/rTriangular.r
-57609747a3e199a48645251fa806dbfa *man/Triangular.Rd
-68428237e65b7afa8ead0040f6d29196 *man/internal.Rd
-f3791c83cebdd9cb3edffeaaf7526600 *man/kInflatedLogConDiscr.Rd
-ae0786112c6153d362eb3f7312e539db *man/logConDiscrCI.Rd
-ed1278ae7f5e0b57e6f7bda58fc7fa09 *man/logConDiscrMLE.Rd
-8e5d81afe6965ef696f7afd8513dd867 *man/logcondiscr-package.Rd
+21993fa83fd5a3fdad5474d957da9a65 *man/Triangular.Rd
+fa4e2d7634a854b322687a15a4e9e3cc *man/internal.Rd
+72219af2a65a752a24a6beb56a0bb976 *man/kInflatedLogConDiscr.Rd
+706f406a193e1987552a27901e3a4051 *man/logConDiscrCI.Rd
+82c85fd16b61a72a604c552ecbc92b12 *man/logConDiscrMLE.Rd
+18e154b78a53e42033de581d0ab797bc *man/logcondiscr-package.Rd
