@@ -8,8 +8,8 @@
 \tabular{ll}{
 Package: \tab logcondiscr \cr
 Type: \tab Package \cr
-Version: \tab 1.0.3 \cr
-Date: \tab 2012-10-06 \cr
+Version: \tab 1.0.4 \cr
+Date: \tab 2013-09-23 \cr
 License: \tab GPL (>=2) \cr
 LazyLoad: \tab yes \cr
 }
@@ -27,12 +27,12 @@ developed in Balabdaoui et al (2012).
 Kaspar Rufibach (maintainer) \email{kaspar.rufibach@gmail.com} \cr \url{http://www.kasparrufibach.ch} \cr
 Fadoua Balabdaoui \email{fadoua@ceremade.dauphine.fr} \cr \url{http://www.ceremade.dauphine.fr/~fadoua}  \cr
 Hanna Jankowski \email{hkj@mathstat.yorku.ca} \cr \url{http://www.math.yorku.ca/~hkj} \cr
-Kathrin Weyermann \email{kathrin.weyermann@bkw-fmb.ch}
+Kathrin Weyermann 
 }
 \references{
-Balabdaoui, F., Jankowski, H., Rufibach, K., and Pavlides, M. (2012).
+Balabdaoui, F., Jankowski, H., Rufibach, K., and Pavlides, M. (2013).
 Maximum likelihood estimation and confidence bands for a discrete log-concave distribution.
-Preprint.
+\emph{J. R. Stat. Soc. Ser. B Stat. Methodol.}, \bold{75}(4), 769--790. 
 
 Weyermann, K. (2007).
 An Active Set Algorithm for Log-Concave Discrete Distributions.
