@@ -1,3 +1,8 @@
+logcondiscr_1.0.4 (September 23, 2012):
+-------------------------------------
+- Removed library() command from .rd files (seems to generate a warning on CRAN).
+- Updated references.
+
 logcondiscr_1.0.3 (October 6, 2012):
 -------------------------------------
 - Corrected a minor error logConDiscrCI().
